# Cruft-Crawler-2

./: Cargo.toml  LICENSE  README.md  config.toml  meeting questions and notes.txt  write_ahead_log.txt
data/: write_ahead_log.txt
data/model_data/: prompt.txt
git-logs/: git-log.txt  jace-log.txt  max-log.txt  note.txt  shayne-log.txt
notes/: database.md  db_schema.md  git_submission.md  llm_kv_schema.md  overview.md  screensaver-api.md
src/: main.rs
src/actor/: ai_model.rs  crawler.rs  db_manager.rs  profiler.rs
src/crawl_test/: first.txt  second.txt
src/test_directory/: another_file.md  hello.cpp  no_panic.txt  third_file.txt
