[lints.rust]
unused_imports = "allow"

[package]
name = "cruft-crawler"
edition = "2024"

[dependencies]
steady_state = "0.2.11"
sled = "0.34.7"
walkdir ="2.5.0"
filetime = "0.2.26"
sha2 = "0.10.9"
hex = "0.4.3"
serde = "1.0.228"
serde_cbor = "0.11.2"
toml = "0.9.11"
llama-cpp-2 = "0.1.133"
encoding_rs = "0.8.35"
anyhow = "1.0.100"
# libc = "0.2"
